src/index.css
body {
  background-color: #f5f6fa;
  margin:0;
  padding:0;
}

.panel-bg {
  width: 1390px;
  margin: 0 auto;
  height: 95px;
  position: relative;
}

.azure {
  color: #0290ff;
}

.Mask {
  width: 27px;
  height: 27px;
  position: absolute;
  right: 40px;
  top: 25px;
}

nav {
  position: relative;
  display: flex;
  align-items: center;
  width: 100%;
  background-color: #fff;
}
ul {
  margin-top: 20px;
}

li {
  list-style: none;
  display: inline;
}

a {
  text-decoration: none;
  color: inherit;
}

.Bookstore-CMS {
  width: 240px;
  height: 37px;
  font-family:
    Montserratapple-system,
    system-ui,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  font-size: 30px;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
}

.BOOKS {
  width: 59px;
  height: 16px;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 13px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: 1.9px;
  color: #121212;
  margin-left: 50px;
  
}

.CATEGORIES {
  width: 105px;
  height: 16px;
  opacity: 0.5;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 13px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: 1.9px;
  color: #121212;
  margin-left: 50px;
}

.categories-div {
  margin-top: 30px;
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
}

.categories-filter {
  height: 50px;
  width: 200px;
  border-radius: 10px;
  font-size: 20px;
  border-color: #939393;
}

.Lesson-Panel {
  width: 1200px;
  margin-top: 20px;
  height: 170px;
  border-radius: 4px;
  border: solid 1px #e8e8e8;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: 100px;
}

table {
  margin-left: auto;
  margin-right: auto;
}

.book-cat {
  padding-top: 20px;
  width: 49px;
  height: 18px;
  opacity: 0.5;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 14px;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #121212;
}

.book-title {
  width: 197px;
  height: 29px;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 22px;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.2px;
  color: #121212;
}

.Remove {
  width: 54px;
  height: 19px;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 14px;
  font-weight: 300;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #4386bf;
  background: none;
  cursor: pointer;
}

.line {
  color: #e8e8e8;
}

.book-info {
  margin-left: 27px;
  display: grid;
  grid-template-columns: 250px;
  grid-template-rows: repeat(3, 1fr);
}

.options {
  display: grid;
  grid-template-columns: 3fr 1fr 3fr 1fr 2fr;
  grid-template-rows: 1fr;
  padding-top: 20px;
}

.book-progress {
  display: flex;
  float: right;
}

.circle {
  background-color: #fff;
  border: 5px solid;
  border-color: #307bbe #307bbe rgb(238, 232, 232);
  height: 60px;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  width: 60px;
  margin-right: 0.6em;
}

.percentage {
  width: 68px;
  height: 39px;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 32px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #121212;
}

.Completed {
  width: 80px;
  height: 18px;
  opacity: 0.5;
  font-family: Roboto, Helvetica, sans-serif;
  font-size: 14px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #121212;
}

.percent-info {
  display: flex;
  flex-direction: column;
}

.udpateprogress {
  font-family: Roboto, Helvetica, sans-serif;
}

button {
  background-color: #0290ff;
  border: none;
  width: 184px;
  height: 33px;
  border-radius: 3px;
  color: white;
}

.current-chap {
  height: 18px;
  opacity: 0.5;
  text-transform: uppercase;
  font-size: 13px;
  font-weight: 300;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  color: #939393;
  margin: 0;
}

.chapter-num {
  width: 212px;
  height: 21px;
  font-size: 16px;
  font-weight: 300;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.4px;
  margin-top: 0;
}

.book-form {
  border-top: 1px solid #e8e8e8;
  width: 1300px;
  margin: 30px auto;
  font-family: Roboto, Helvetica, sans-serif;
}

.book-form h3 {
  width: 174px;
  height: 24px;
  font-size: 20px;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.18px;
  color: #888;
}

.book-form form input {
  width: 50%;
  height: 45px;
  border-radius: 4px;
  border: solid 1px #e8e8e8;
  background-color: #fff;
  margin-right: 4%;
  box-sizing: border-box;
}

.book-form form select {
  width: 23%;
  height: 45px;
  box-sizing: border-box;
  border-radius: 4px;
  border: solid 1px #e8e8e8;
  background-color: #fff;
  margin-right: 4%;
}

.book-form form button {
  width: 19%;
  height: 42px;
  box-sizing: border-box;
}

